Bug 507007 - Kolourpaint installs color schemes in an inappropriate location
Summary: Kolourpaint installs color schemes in an inappropriate location
Status: RESOLVED FIXED
Alias: None
Product: kolourpaint
Classification: Applications
Component: general (other bugs)
Version First Reported In: 25.07.80
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: kolourpaint-support
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-07-13 22:11 UTC by Neal Gompa
Modified: 2025-08-20 20:22 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Neal Gompa 2025-07-13 22:11:42 UTC
SUMMARY
While packaging Kolourpaint 25.07.80, it was noticed that it installs color scheme files in /etc/xdg/colors, which is a weird place for application-specific data. It would be vastly preferred if this was installed into a subdirectory of /usr/share/kolourpaint/ or similar application-specific data directory, so that it doesn't pollute the global /etc space and doesn't get incorrectly marked as user-modifiable config files rather than the data files they actually are.

If these are intended to be global color scheme options, they should be installed in /usr/share somewhere instead of /etc along with the rest of the style data rather than with kolourpaint.

OBSERVED RESULT
Color schemes are installed in /etc/xdg/colors

EXPECTED RESULT
Color schemes are installed in /usr/share/kolourpaint/colors or similar private directory.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Fedora Linux 43 (Fedora KDE Plasma Edition Prerelease)
KDE Plasma Version: 6.4.2
KDE Frameworks Version: 6.16.0
Qt Version: 6.9.1

ADDITIONAL INFORMATION
Comment 1 Bug Janitor Service 2025-07-13 22:22:26 UTC
A possibly relevant merge request was started @ https://invent.kde.org/graphics/kolourpaint/-/merge_requests/79
Comment 2 Luigi Toscano 2025-08-20 20:13:25 UTC
Git commit d35991d3d9b94c829c0d27835f8a49b85a810b91 by Luigi Toscano, on behalf of Nicolas Fella.
Committed on 17/08/2025 at 15:13.
Pushed by ltoscano into branch 'master'.

Install colors file into app-specific directory

Kolourpain-specific data should not go into a generically named global config dir

M  +1    -1    CMakeLists.txt
M  +2    -2    lgpl/generic/kpColorCollection.cpp

https://invent.kde.org/graphics/kolourpaint/-/commit/d35991d3d9b94c829c0d27835f8a49b85a810b91
Comment 3 Luigi Toscano 2025-08-20 20:22:18 UTC
Git commit c5ea108830c5fffda6b9b807cd189dd809ecdaa8 by Luigi Toscano, on behalf of Nicolas Fella.
Committed on 20/08/2025 at 20:15.
Pushed by ltoscano into branch 'release/25.08'.

Install colors file into app-specific directory

Kolourpain-specific data should not go into a generically named global config dir
(cherry picked from commit d35991d3d9b94c829c0d27835f8a49b85a810b91)

M  +1    -1    CMakeLists.txt
M  +2    -2    lgpl/generic/kpColorCollection.cpp

https://invent.kde.org/graphics/kolourpaint/-/commit/c5ea108830c5fffda6b9b807cd189dd809ecdaa8