Install colors file into app-specific directory

Kolourpain-specific data should not go into a generically named global config dir

BUG: 507007